--- a/index.html
+++ b/index.html
@@ -32,5 +32,23 @@
         <i class='bx bx-search-alt'></i> (search)
         <i class='bx bxl-github'></i> (github)
     -->
+    <header>
+        <img class="header--img" src="assets/images/logo.png" alt="Pokedex logo">
+        <h2>
+            Carrousel Pokédex
+        </h2>
+    </header>
+    <section class="search--section">
+        <div class="search--title">
+            <h1>
+                Pokédex
+            </h1>
+            <p>
+                Search your favourite Pokémon by name or number using our Carrousel Pokédex!
+            </p>
+        </div>
+    </section>
+
+    <script src="assets/js/index.js"></script>
 </body>
 </html>
