--- a/index.html
+++ b/index.html
@@ -32,5 +32,18 @@
         <i class='bx bx-search-alt'></i> (search)
         <i class='bx bxl-github'></i> (github)
     -->
+    <footer>
+        <div class="footer-content">
+            <h2>Credits</h2>
+                <ul class="socials">
+                    <li><a href="https://github.com/Paucizmadija"><i class='bx bxl-github'></i>Paula</a></li>
+                    <li><a href="https://github.com/AixaFlores"><i class='bx bxl-github'></i>Aixa</a></li>
+                    <li><a href="https://github.com/BelenDelgadilloArias"><i class='bx bxl-github'></i>Belen</a></li>
+                    <li><a href="https://github.com/ValentinaBS"><i class='bx bxl-github'></i>Valentina</a></li>
+                    <li><a href="https://github.com/ludm1"><i class='bx bxl-github'></i>Ludmila</a></li>
+                </ul>
+        </div>
+        
+    </footer>
 </body>
 </html>
