--- a/index.html
+++ b/index.html
@@ -32,5 +32,23 @@
         <i class='bx bx-search-alt'></i> (search)
         <i class='bx bxl-github'></i> (github)
     -->
+    <div class="contenedor">
+
+        <div class="tarjetas">
+            <p>#001</p>
+            <p> <i class='bx bxs-leaf'></i>
+                Bulbasaur</p>
+            <img src="./assets/images/001.png" alt="Bulbasaur">
+
+            <div class="tipo"> 
+                <p>planta</p>
+            </div>
+
+            <div class="tipo1">
+                <p>veneno</p>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
