feat: search bar

--- a/index.html
+++ b/index.html
@@ -32,5 +32,14 @@
         <i class='bx bx-search-alt'></i> (search)
         <i class='bx bxl-github'></i> (github)
     -->
+
+    <div class="container">
+        <div class="search-container">
+            <input type="textsearch" class="search-input" placeholder="Bulbasaur or 001...">
+            <div class="search-img">
+                <i class='bx bx-search-alt'></i>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
