--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                 <p>veneno</p>
             </div>
         </div>
+        <div class="horizontal-scrollbar">
+            ........................................................................................................................................................................................................................................................................................................................................................................
+            </div>
     <footer>
         <div class="footer-content">
             <h2>Credits</h2>
