--- a/index.html
+++ b/index.html
@@ -56,17 +56,25 @@
             </div>
         </div>
     </section>
-        <div class="tarjetas">
-            <p>#001</p>
-            <p> <i class='bx bxs-leaf'></i>
-                  Bulbasaur</p>
-            <img src="./assets/images/001.png" alt="Bulbasaur">
+        <div class="card">
+            <div class="pokemon-number">
+                <p>#001</p>
+            </div>
 
-            <div class="tipo"> 
+            <div class="pokemon-name">
+                <p><i class='bx bxs-leaf'></i>Bulbasaur</p>
+            </div>
+            
+            <div>
+                <img src="./assets/images/001.png" class="pokemon">
+                <img src="./assets/images/bg-pokeball.png" class="bg-pokeball">
+            </div>
+           
+            <div class="tipe"> 
                 <p>planta</p>
             </div>
 
-            <div class="tipo1">
+            <div class="tipe1">
                 <p>veneno</p>
             </div>
         </div>
