fixed: merge confflict

--- a/index.html
+++ b/index.html
@@ -14,32 +14,34 @@
 </head>
 <body>
     <!--
-        <i class='bx bxs-circle'></i> (normal)
+        <i class='bx bxs-doughnut-chart'></i> (normal)
         <i class='bx bxs-hot'></i> (fire)
-        <i class='bx bx-water' ></i> (water)
+        <i class='bx bxs-shower'></i> (water)
         <i class='bx bxs-bolt'></i> (electric)
         <i class='bx bxs-leaf' ></i> (plant)
         <i class='bx bxs-popsicle' ></i> (ice)
         <i class='bx bxs-hand'></i> (fight)
         <i class='bx bxs-skull'></i> (poison)
-        <i class='bx bx-world'></i> (ground)
+        <i class='bx bxs-landscape'></i> (ground)
         <i class='bx bxs-paper-plane'></i> (flying)
         <i class='bx bxs-brain'></i> (psychic)
         <i class='bx bxs-bug'></i> (bug)
         <i class='bx bxs-component'></i> (rock)
         <i class='bx bxs-ghost'></i> (ghost)
         <i class='bx bxs-castle'></i> (dragon)
+        <i class='bx bxs-star'></i> (fairy)
+        <i class='bx bxs-shield-alt-2'></i> (steel)
         <i class='bx bx-search-alt'></i> (search)
         <i class='bx bxl-github'></i> (github)
     -->
     <header>
-        <img class="header--img" src="assets/images/logo.png" alt="Pokedex logo">
+        <img class="header-img" src="assets/images/logo.png" alt="Pokedex logo">
         <h2>
             Carrousel Pokédex
         </h2>
     </header>
-    <section class="search--section">
-        <div class="search--title">
+    <section class="search-section">
+        <div class="search-title">
             <h1>
                 Pokédex
             </h1>
@@ -56,44 +58,21 @@
             </div>
         </div>
     </section>
-
-      <div class="card">
-            <div class="pokemon-number">
-                <p>#001</p>
-            </div>
-
-            <div class="pokemon-name">
-                <p><i class='bx bxs-leaf'></i>Bulbasaur</p>
-            </div>
-            
-            <div>
-                <img src="./assets/images/001.png" class="pokemon">
-                <img src="./assets/images/bg-pokeball.png" class="bg-pokeball">
-            </div>
-           
-            <div class="tipe"> 
-                <p>planta</p>
-            </div>
-
-            <div class="tipe1">
-                <p>veneno</p>
-            </div>
-       </div>
-
+    <div class="cards-container" id="pokemon-list"></div>
+    <!--
         <div class="horizontal-scrollbar">
             ........................................................................................................................................................................................................................................................................................................................................................................
             </div>
-    <footer>
-        <div class="footer-content">
+    -->
+    <footer class="footer-content">
             <h2>Credits</h2>
-                <ul class="socials">
-                    <li><a href="https://github.com/Paucizmadija"><i class='bx bxl-github'></i>Paula</a></li>
-                    <li><a href="https://github.com/AixaFlores"><i class='bx bxl-github'></i>Aixa</a></li>
-                    <li><a href="https://github.com/BelenDelgadilloArias"><i class='bx bxl-github'></i>Belen</a></li>
-                    <li><a href="https://github.com/ValentinaBS"><i class='bx bxl-github'></i>Valentina</a></li>
-                    <li><a href="https://github.com/ludm1"><i class='bx bxl-github'></i>Ludmila</a></li>
-                </ul>
-        </div>
+            <ul class="socials">
+                <li><a href="https://github.com/Paucizmadija"><i class='bx bxl-github'></i><span>Paula</span></a></li>
+                <li><a href="https://github.com/AixaFlores"><i class='bx bxl-github'></i><span>Aixa</span></a></li>
+                <li><a href="https://github.com/BelenDelgadilloArias"><i class='bx bxl-github'></i><span>Belen</span></a></li>
+                <li><a href="https://github.com/ValentinaBS"><i class='bx bxl-github'></i><span>Valentina</span></a></li>
+                <li><a href="https://github.com/ludm1"><i class='bx bxl-github'></i><span>Ludmila</span></a></li>
+            </ul>
     </footer>
     <script src="assets/js/index.js"></script>
 </body>
