feat: functional search bar and responsive header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
         <img class="header-img" src="assets/images/logo.png" alt="Pokedex logo">
         <h2>
-            Carrousel Pokédex
+            Carrousel <span class="responsive-title">Pokédex</span>
         </h2>
     </header>
     <section class="search-section">
